Now we can purchase songs (saved in db)
